# CV-Align

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  QWEN.md  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: .flake8  debug_rag.py  pyproject.toml  requirements.txt  test_chunking.py  test_langchain_gemma.py
backend/app/: main.py
backend/app/auth/: auth.py
backend/app/database/: config.py  init_db.py
backend/app/models/: schemas.py
backend/app/routes/: auth.py  evaluations.py  jobs.py  users.py
backend/app/services/: document_processor.py  llm_service.py  prompts.py  rag_engine.py
backend/app/utils/: error_handlers.py  exceptions.py  logging_config.py  middleware.py
backend/database/: cvalign.db
backend/docs/: API_DOCUMENTATION.md
backend/tests/: conftest.py  test_auth.py  test_jobs.py  test_main.py  test_simple.py
docs/: CHUNKING_IMPLEMENTATION.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/__tests__/: App.test.js  Login.test.js  simple.test.js
frontend/src/components/: CVUpload.css  CVUpload.jsx  CandidateList.css  CandidateList.jsx  ErrorBoundary.css  ErrorBoundary.jsx  Loading.css  Loading.jsx  Navbar.css  Navbar.jsx  SearchBar.css  SearchBar.jsx  Toast.css  Toast.jsx
frontend/src/pages/: CandidateEvaluation.css  CandidateEvaluation.jsx  CreateJob.css  CreateJob.jsx  Dashboard.css  Dashboard.jsx  ForgotPassword.css  JobDetails.css  (+8 more)
tasks/: todo.md
(+3 files in other folders)
